# schlaugh-bot

./: Cargo.toml  LICENSE  README.md  wrangler.toml
src/: discord.rs  lib.rs  schlaugh.rs
