[package]
name = "schlaugh-bot"
version = "0.1.0"
edition = "2021"
authors = [ "Lucie Philippon <lucie.philippon@proton.me>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0" }
worker-macros = { version="0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.45.0", features = ["full"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
